add 2 columns in skills

--- a/locales/es.json
+++ b/locales/es.json
@@ -11,7 +11,7 @@
     "name": "Nicolas A.",
     "lastName": "Carlini",
     "subHeadingText": [
-      "Software Enginneer",
+      "Tecnico en Programación",
       "DevOps Culture",
       "Amante del Codigo!"
     ],
