--- a/locales/es.json
+++ b/locales/es.json
@@ -39,12 +39,20 @@
     "title": "Experiencia Laboral 🔨",
     "works": [
       {
+        "position": "DevOps Specialist",
+        "companie": "Balanz",
+        "responsabilities": [
+          "Construir ambientes de kubernetes productivos para llevar a cabo una migracion desde onpremise a cloud con k8s y el stack de aws, implementar la cultura DevOps y mejorar la calidad de vida de los devs."
+        ],
+        "startEndDate": "Julio 2021 - Presente"
+      },,
+      {
         "position": "DevOps / backend",
         "companie": "SIMPLICAR",
         "responsabilities": [
           "Mejora de la infraestructura, automatización de los flujos de desarrollo creando CI/CD, desarrollo en Python sobre Django principalmente implementando integraciones y mejorando la calidad de código."
         ],
-        "startEndDate": "Septiembre 2020 - Presente"
+        "startEndDate": "Septiembre 2020 - Julio 2021"
       },
       {
         "position": "Programador backend",
